--- a/css/style.css
+++ b/css/style.css
@@ -1,40 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
-
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-
-html,
-body {
-  font-family: 'Poppins', sans-serif;
-  scroll-behavior: smooth;
-}
-
-.container {
-  max-width: 90%;
-  margin: auto;
-}
-
-li {
-  list-style: none;
-}
-
-a {
-  text-decoration: none;
-  transition: 0.5s;
-}
-
-.flex {
-  display: flex;
-}
-
-.flex1 {
-  display: flex;
-  justify-content: space-between;
-}
 
 /*-------------head--------- */
 .head {
@@ -233,6 +196,131 @@ button span {
 
 .heading {
   text-align: center;
+}
+
+/* Mobile Styles */
+@media only screen and (max-width: 768px) {
+  .heading h5 {
+    padding-top: 10px;
+    font-size: 18px;
+  }
+
+  .heading h2 {
+    font-size: 30px;
+  }
+
+  .left, .right {
+    width: 100%;
+  }
+
+  h3 {
+    font-size: 25px;
+  }
+
+  .about .left {
+    padding: 10px;
+  }
+
+  p {
+    font-size: 14px;
+  }
+
+  .about .right::after {
+    height: 40vh;
+  }
+
+  .about::before,
+  .about::after {
+    height: 20px;
+  }
+
+  /* Wrapper Section */
+  .wrapper {
+    height: auto;
+  }
+
+  .wrapper .container {
+    max-width: 100%;
+  }
+
+  .wrapper .item {
+    margin-top: 10%;
+    padding: 30px;
+    border: 20px solid #F3F3F3;
+  }
+
+  /* Room Section */
+  .room.wrapper2::after {
+    display: block;
+  }
+
+  .grid2 {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .room img {
+    margin-left: 0;
+  }
+
+  /* Timer Section */
+  .timer {
+    padding-top: 8%;
+  }
+
+  /* Offer Section */
+  .offer .right {
+    padding: 10px;
+    margin: 10px;
+  }
+
+  /* Area Section */
+  .area img {
+    margin: 0 0 20px 0;
+  }
+
+  .area ul li {
+    display: block;
+    margin-right: 0;
+    margin-bottom: 10px;
+  }
+
+  .area .left::after {
+    display: none;
+  }
+
+  /* Offer2 Section */
+  .offer2 .heading {
+    padding-top: 5%;
+  }
+
+  .offer2.wrapper {
+    height: auto;
+  }
+
+  .offer2 .container {
+    max-width: 100%;
+  }
+
+  .offer2 .box {
+    padding: 15px;
+    margin-bottom: 15px;
+  }
+
+  .offer2 .box h5 {
+    font-size: 16px;
+  }
+
+  .offer2 .box h3 {
+    font-size: 18px;
+  }
+
+  .offer2 .grid {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .offer2 .flex i {
+    margin: 0 0 10px 0;
+  }
 }
 
 .heading h5 {
@@ -722,6 +810,127 @@ p {
   transition: 0.5s;
   cursor: pointer;
 }
+
+/* Mobile Styles */
+@media only screen and (max-width: 768px) {
+  /* Header */
+  .nav-menu {
+    display: none;
+    flex-direction: column;
+    width: 100%;
+    position: absolute;
+    background: #fff;
+    top: 60px;
+    left: 0;
+    z-index: 1000;
+    text-align: center;
+  }
+
+  .nav-menu.show {
+    display: flex;
+  }
+
+  .nav-menu li {
+    margin-bottom: 10px;
+  }
+
+  .hamburger {
+    display: block;
+    cursor: pointer;
+  }
+
+  /* About Section */
+  .about .right::after {
+    display: none;
+  }
+
+  .about::before,
+  .about::after {
+    display: none;
+  }
+
+  .about .left,
+  .about .right {
+    width: 100%;
+    box-sizing: border-box;
+  }
+
+  /* Wrapper Section */
+  .wrapper {
+    height: auto;
+  }
+
+  .wrapper .container {
+    max-width: 100%;
+  }
+
+  .wrapper .item {
+    margin-top: 5%;
+    padding: 20px;
+  }
+
+  /* Room Section */
+  .room.wrapper2::after {
+    display: block;
+  }
+
+  .room img {
+    margin-left: 0;
+  }
+
+  /* Timer Section */
+  .timer h2,
+  .timer h5,
+  .timer .container {
+    text-align: center;
+  }
+
+  /* Offer Section */
+  .offer .right {
+    padding: 10px;
+  }
+
+  /* Area Section */
+  .area .left::after {
+    display: none;
+  }
+
+  /* Offer2 Section */
+  .offer2 .wrapper {
+    height: auto;
+  }
+
+  .offer2 .container {
+    max-width: 100%;
+  }
+
+  .offer2 .box {
+    padding: 20px;
+    margin-bottom: 20px;
+  }
+
+  /* Customer Section */
+  .customer .mtop {
+    max-width: 100%;
+  }
+
+  /* Gallary Section */
+  .gallary .item {
+    position: relative;
+  }
+
+  .gallary .overlay i {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  .gallary .overlay {
+    background: rgba(204, 140, 24, 0.73);
+  }
+}
+
 
 /*------------gallary------------*/
 /*------------blog------------*/
